# homework

./: README
homework_01/: main.py
homework_02/: base.py  car.py  exceptions.py  plane.py
homework_03/: Dockerfile  app.py  pyproject.toml
