[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = ""
authors = ["lakomiy <lakomiy12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
docker = "^5.0.3"
docker-compose = "^1.29.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
